src/main/java/org/example/liskov/substitution/good/CreditCardLoan.java
package org.example.liskov.substitution.good;

public class CreditCardLoan implements LoanPayment{
    @Override
    public void payLoan() {

    }
}
